# LRDB

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  lrdb-0.1.7-1.rockspec  lrdb-0.2.4-1.rockspec  lrdb-0.3.1-1.rockspec  luarocks_cmake.txt  test_runner.py
.github/workflows/: cmake.yml  codeql-analysis.yml  coverage.yml  luarocks.yml  node.yml  release.yml  test.yml
buildem/: install_manifest.txt
cmake/: FindLua.cmake  ReduceDependencies.cmake  Toolchain-cross-mingw32-linux.cmake
include/lrdb/: basic_server.hpp  client.hpp  command_stream_socket.hpp  command_stream_socket_emscripten.hpp  command_stream_stdstream.hpp  debug_command.hpp  debugger.hpp  message.hpp  optional.hpp  server.hpp  server_socket.hpp  server_socket_emscripten.hpp
include/lrdb/server/: command_stream_node_emscripten.hpp  command_stream_socket.hpp  debug_command.hpp
node/: .eslintignore  .eslintrc.js  .gitignore  .npmignore  .prettierignore  .prettierrc.json  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
node/src/: Client.ts  JsonRpc.ts  LuaWasm.ts  TypedEventEmitter.ts  index.ts
node/src/Adapter/: ChildProcessAdapter.ts  TcpAdapter.ts  index.ts
node/src/__tests__/: ChildProcessClient.test.ts  node_lua_with_lrdb.test.ts
node/src/__tests__/__snapshots__/: ChildProcessClient.test.ts.snap
src/: debug_server_module.cpp  lua_with_lrdb_server.cpp  node_lua_with_lrdb.cpp
test/: kaguya.hpp  lrdb_server_test.cpp  lrdb_server_test1.cpp  lua_debugger_test.cpp
test/lua/: break_coroutine_test1.lua  env_change_test1.lua  eval_test1.lua  eval_test2.lua  infinite_loop.lua  loadmodule.lua  loop_test.lua  require_module.lua  step_in_test1.lua  step_out_test1.lua  step_over_test1.lua  table.lua  test1.lua  vaarg_test1.lua
vscode_extension/: CHANGELOG.md  README.md  package.json
vscode_extension/prebuilt/: lua_with_lrdb_server.js
vscode_extension/src/: extension.ts  lrdbDebug.ts  utilities.ts
vscode_extension/test/: debugadapter.test.ts  extension.test.ts  index.ts
vscode_extension/test/lua/: get_local_variable_test.lua  get_upvalue_test.lua  step_test.lua
